fix z-index & preview image

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -335,7 +335,7 @@ label {
   width: 316px;
   height: 436px;
   background-image: url('/src/pictures/pic2/fig4.svg');
-  z-index: 3;
+  z-index: 4;
 }
 
 #id2 .fig5 {
